--- a/website/src/Pages/Home/Home.css
+++ b/website/src/Pages/Home/Home.css
@@ -3,7 +3,12 @@
 }
   
 .footer-div {
-    margin-top: 2rem;
-    margin-bottom: 2rem;
+    margin-top: 1rem;
+    /* margin-bottom: 1rem; */
     text-align: center;
+}
+
+img {
+    margin-top: 1rem;
+    height: 5rem;
 }
