--- a/website/src/Pages/Home/Home.css
+++ b/website/src/Pages/Home/Home.css
@@ -2,8 +2,13 @@ body {
     font-family: 'Noto Sans Serif', sans-serif;
 }
 
+.page-div {
+    margin-top: 0.5rem;
+    text-align: center;
+}
+
 .footer-div {
-    margin-top: 1rem;
+    margin-top: 0.5rem;
     text-align: center;
 }
 
