--- a/website/src/App.css
+++ b/website/src/App.css
@@ -1,4 +1,22 @@
-.App {
-  display: flex;
-  flex-direction: column;
+body {
+  font-family: 'Noto Sans Serif', sans-serif;
+}
+
+.page-div {
+  margin-top: 0.5rem;
+  text-align: center;
+}
+
+.footer-div {
+  margin-top: 0.5rem;
+  text-align: center;
+}
+
+img {
+  margin-top: 1rem;
+  height: 5rem;
+}
+
+.loading-wheel {
+  display: none;
 }
