Removed logo from nodejs page

--- a/elastic_search/views/head.pug
+++ b/elastic_search/views/head.pug
@@ -12,11 +12,7 @@ html(lang="en")
     body
         block header
             header.mb-1.py-2.d-flex.flex-wrap
-                a(href="./").align-items-center.d-flex.flex-wrap.text-decoration-none.nav-link
-                    div.ps-2.d-flex.flex-column.align-items-center
-                        img.image(src="https://upload.net-empregos.com/uploads/91a0d52036ed4b2599c0aa85f272e93b/logo-net-empregos.png", alt="Universidade Nova de Lisboa", style="height: 5rem;")
-
-                div.flex-fill.d-none.d-lg-block
+                div.flex-fill.d-none
                 nav
                     div.d-flex
                         div
