--- a/website/src/App.css
+++ b/website/src/App.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Cinzel&display=swap');
+
 body {
   font-family: 'Noto Sans Serif', sans-serif;
 }
@@ -41,4 +43,9 @@ span {
 
 img:hover {
   transition: all 0.3s ease-in-out;
+}
+
+.fancy-font {
+  font-family: 'Cinzel', serif;
+  font-weight: 500;
 }
