--- a/website/src/App.css
+++ b/website/src/App.css
@@ -48,4 +48,13 @@ img:hover {
 .fancy-font {
   font-family: 'Cinzel', serif;
   font-weight: 500;
+  margin: 0px;
+}
+
+.editorSelector {
+  border: 1px solid black;
+  border-bottom: none;
+  border-top-left-radius: 7px;
+  border-top-right-radius: 7px;
+  cursor: pointer;
 }
