--- a/website/src/App.css
+++ b/website/src/App.css
@@ -21,6 +21,26 @@ body {
     text-decoration: underline;
 }
 
+.pageImage {
+    position: relative;
+    height: 80vh;
+    width: 68vw;
+    overflow: scroll;
+    border: 1px solid grey;
+}
+
+.MuiButton-contained.menuFunctionButton {
+    border: 1px solid black;
+    height: 2rem;
+    text-transform: none;
+    margin-right: 1rem;
+    font-size: 0.75rem;
+}
+
+.menuFunctionButton.noMargin {
+    margin-right: 0
+}
+
 .page-div {
   margin-top: 0.5rem;
   text-align: center;
