implement OCR menu and configuration options
Users can specify the OCR engine, language(s), engine mode (OEM for tesseract), segmentation mode, thresholding method, and DPI, as well as give a custom string of additional parameters.

AdventurousGui/updates-OCR#19

--- a/website/src/App.css
+++ b/website/src/App.css
@@ -70,6 +70,12 @@ body {
     margin-right: 0
 }
 
+.MuiFormControl-root.simpleDropdown {
+    margin-bottom: 0.3rem;
+    margin-top: 0.5rem;
+    width: 100%;
+}
+
 .page-div {
   margin-top: 0.5rem;
   text-align: center;
