NF4 - implement OCR menu as a dedicated page
Also prepares API call for requesting OCR of all documents inside a given folder

AdventurousGui/updates-OCR#19
AdventurousGui/updates-OCR#31

--- a/website/src/App.css
+++ b/website/src/App.css
@@ -82,6 +82,12 @@ body {
     width: 100%;
 }
 
+.simpleDropdown.ocrDropdown {
+    width: fit-content;
+    min-width: 54%;
+    max-width: 100%;
+}
+
 .page-div {
   margin-top: 0.5rem;
   text-align: center;
