--- a/website/src/App.css
+++ b/website/src/App.css
@@ -128,12 +128,32 @@ body {
     background-color: #ffed7a;
 }
 
+.explorerCell.successCell {
+    background-color: #19a942;
+}
+
+.explorerCell.waitingCell {
+    background-color: #a6a6a6;
+}
+
+.stateCell .stateBox {
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+}
+
 .MuiTableCell-root.nameCell {
     width: 26%;
 }
 
 .MuiTableCell-root.actionsCell {
-    width: 23%;
+    width: 20%;
+}
+
+.MuiTableCell-root.stateCell {
+    width: 8%;
 }
 
 .MuiTableCell-root.dateCreatedCell {
