IF13 - add buttons to admin dashboard
expected features are "manage storage", "configure OCR", and "manage workers and processes"

AdventurousGui/updates-OCR#15

--- a/website/src/App.css
+++ b/website/src/App.css
@@ -37,6 +37,12 @@ body {
     color: #f00;
 }
 
+.MuiButton-contained.adminMenuButton {
+    border: 1px solid black;
+    text-transform: none;
+    font-size: 2rem;
+}
+
 .MuiButton-contained.menuFunctionButton {
     border: 1px solid black;
     height: 2rem;
