--- a/website/src/App.css
+++ b/website/src/App.css
@@ -48,11 +48,19 @@ body {
     height: 2rem;
     text-transform: none;
     margin-right: 1rem;
-    font-size: 0.75rem;
+    width: fit-content;
 }
 
-.menuFunctionButton.noMargin {
+.menuFunctionButton.noMarginRight {
     margin-right: 0
+}
+
+.MuiButton-contained.menuButton {
+    border: 1px solid black;
+    text-transform: none;
+    font-size: 1rem;
+    height: 2rem;
+    width: fit-content;
 }
 
 .fileIcon {
@@ -80,18 +88,6 @@ body {
     margin: auto;
     border: 1px solid black;
     object-fit: contain;
-}
-
-.MuiButton-contained.menuFunctionButton {
-    border: 1px solid black;
-    height: 2rem;
-    text-transform: none;
-    margin-right: 1rem;
-    font-size: 0.75rem;
-}
-
-.menuFunctionButton.noMargin {
-    margin-right: 0
 }
 
 .MuiFormControl-root.simpleInput {
@@ -222,7 +218,7 @@ body {
 }
 
 span {
-  font-size: 0.9rem;
+  font-size: 1rem;
   white-space: pre-line;
 }
 
