--- a/website/src/App.css
+++ b/website/src/App.css
@@ -13,7 +13,9 @@ body {
     height: 2rem;
     align-items: center;
     font-family: "Roboto", "Helvetica", "Arial", sans-serif;
-    font-size: 0.875rem
+    font-size: 0.875rem;
+    font-weight: 500;
+    letter-spacing: 0.02857em;
 }
 
 .MuiBox-root .pathButton {
