--- a/website/src/App.css
+++ b/website/src/App.css
@@ -199,6 +199,13 @@ cannot be styled with props, interferes with functioning of Autocomplete
     text-align: center;
 }
 
+.actionsCell-inner {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
 .MuiTableCell-root.stateCell {
     width: 8%;
     text-align: center;
