visually separate paragraphs in results
Lines are visually grouped together in the Results Editing menu according to the identified paragraphs.

Note that currently, merging lines irreversibly pulls the second line back to the first line's paragraph. A new functionality would be needed to create paragraphs as well as simply separating lines.

closes AdventurousGui/updates-OCR#44

--- a/website/src/App.css
+++ b/website/src/App.css
@@ -112,6 +112,17 @@ body {
     object-fit: contain;
 }
 
+.editingSection {
+    display: flex;
+    flex-direction: column;
+    max-width: 100%;
+    margin-bottom: 20px;
+}
+
+.editingLine {
+    max-width: 100%;
+}
+
 /*
 input field within a TextField used within Autocomplete
 cannot be styled with props, interferes with functioning of Autocomplete
