--- a/website/src/App.css
+++ b/website/src/App.css
@@ -82,7 +82,7 @@ body {
     text-transform: none;
     font-size: 1rem;
     height: 2rem;
-    width: fit-content;
+    width: max-content;
     margin-left: 1rem;
     margin-top: auto;
     margin-bottom: auto;
