--- a/website/src/App.css
+++ b/website/src/App.css
@@ -83,13 +83,14 @@ body {
     font-size: 1rem;
     height: 2rem;
     width: max-content;
-    margin-left: 1rem;
+    margin-left: 0.7rem;
     margin-top: auto;
     margin-bottom: auto;
     padding: 0 10px 0 10px;
 }
 
 .fileIcon {
+    color: black;
     font-size: 25px;
     margin: 0.5rem 0.5rem 0.5rem 0.2rem;  /* 0.2rem left */
 }
@@ -107,6 +108,10 @@ body {
     width: 100%;
     overflow: scroll;
     border: 1px solid grey;
+}
+
+.pageImageContainer:hover {
+    cursor: crosshair;
 }
 
 .pageImageContainer .pageImage {  /* pageImage within a pageImageContainer */
@@ -159,18 +164,19 @@ cannot be styled with props, interferes with functioning of Autocomplete
   File Explorer table formatting
 */
 
-/* Color odd rows, ensures recolor when table is re-ordered */
-.MuiTableRow-root.explorerRow:nth-child(odd) {
+.MuiTableRow-root.explorerRow {
+    height: 4rem;
     background-color: #ffffff;
 }
 
-/* Color even rows, ensures recolor when table is re-ordered */
-.MuiTableRow-root.explorerRow:nth-child(even) {
-    background-color: #f5f5f5;
+.MuiTableRow-root.explorerRow:hover {
+    background-color: #d7d7d7 !important;
 }
 
-.MuiTableRow-root.explorerRow {
-    height: 4rem;
+.MuiTableCell-root.MuiTableCell-head.headerCell {
+    text-align: left;
+    height: 2rem;
+    padding: 16px;
 }
 
 .MuiTableCell-root.explorerCell {
@@ -208,63 +214,70 @@ cannot be styled with props, interferes with functioning of Autocomplete
 }
 
 .MuiTableCell-root.nameCell {
-    width: 30%;
+    width: 34%;
+    text-align: left;
 }
 
 .MuiTableCell-root.staticNameCell {
-    width: 38%;
+    width: 65.5%;
+    text-align: left;
 }
 
 .MuiTableCell-root.actionsCell {
-    width: 20%;
+    width: 14%;
     text-align: center;
+    padding: 0;
 }
 
 .MuiTableCell-root.staticActionsCell {
-    width: 20%;
+    display: none;
+    width: 14%;
     text-align: center;
 }
 
 .actionsCell-inner {
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
+    width: 100%;
     justify-content: center;
     align-items: center;
+    float: right;
 }
 
 .MuiTableCell-root.stateCell {
-    width: 8%;
+    width: 13%;
     text-align: center;
 }
 
 .MuiTableCell-root.dateCreatedCell {
-    width: 15%;
-    text-align: center;
+    width: 13%;
+    text-align: left;
 }
 
 .MuiTableCell-root.staticDateCreatedCell {
-    width: 15%;
-    text-align: center;
+    width: 13%;
+    text-align: left;
 }
 
 .MuiTableCell-root.detailsCell {
-    width: 20%;
-    text-align: center;
+    width: 10%;
+    text-align: left;
 }
 
 .MuiTableCell-root.staticDetailsCell {
-    width: 20%;
-    text-align: center;
+    width: 10%;
+    text-align: left;
 }
 
 .MuiTableCell-root.sizeCell {
-    width: 12%;
-    text-align: center;
+    width: 8%;
+    text-align: right;
 }
 
 .MuiTableCell-root.staticSizeCell {
-    width: 12%;
-    text-align: center;
+    width: 8%;
+    text-align: right;
 }
 
 /*
