--- a/website/src/App.css
+++ b/website/src/App.css
@@ -184,6 +184,7 @@ cannot be styled with props, interferes with functioning of Autocomplete
     height: 4rem;
     background-color: #ffffff;
     border-top: 1px solid #e0e0e0;
+    border-bottom: 1px solid #e0e0e0;
 }
 
 .MuiTableRow-root.explorerRow:hover {
