--- a/website/src/App.css
+++ b/website/src/App.css
@@ -180,6 +180,10 @@ cannot be styled with props, interferes with functioning of Autocomplete
   File Explorer table formatting
 */
 
+.MuiTableRow-head.explorerHeaderRow {
+    background-color: #f5f5f5;
+}
+
 .MuiTableRow-root.explorerRow {
     height: 4rem;
     background-color: #ffffff;
@@ -206,6 +210,7 @@ cannot be styled with props, interferes with functioning of Autocomplete
 }
 
 .MuiTableCell-root.explorerCell {
+    background-color: inherit;
     border-left: 1px solid #aaa;
     font-size: 1rem;
 }
