--- a/website/src/App.css
+++ b/website/src/App.css
@@ -61,15 +61,15 @@ body {
     color: black;
 }
 
-.MuiButtonBase-root.actionButton {
+.MuiBox-root.actionButton, .MuiButtonBase-root.actionButton {
     color: #1976d2;
 }
 
-.MuiButtonBase-root.actionButton.altColor {
+.MuiBox-root.actionButton.altColor, .MuiButtonBase-root.actionButton.altColor {
     color: #19a942;
 }
 
-.MuiButtonBase-root.negActionButton {
+.MuiBox-root.negActionButton, .MuiButtonBase-root.negActionButton {
     color: #f00;
 }
 
@@ -79,11 +79,18 @@ body {
     font-size: 2rem;
 }
 
+span.toolbarTitle, .MuiTypography-root.toolbarTitle {
+    margin-left: 1rem;
+    margin-top: 0.5rem;
+    text-align: center;
+}
+
 .MuiButton-contained.menuFunctionButton {  /* overrides React MUI styles */
     border: 1px solid black;
     height: 2rem;
     text-transform: none;
     margin-right: 1rem;
+    margin-top: 0.5rem;
     width: fit-content;
 }
 
