allow skipping to a page with number input
AdventurousGui/updates-OCR#3
AdventurousGui/updates-OCR#5

--- a/website/src/App.css
+++ b/website/src/App.css
@@ -197,6 +197,14 @@ span.toolbarTitle, .MuiTypography-root.toolbarTitle {
     user-select: none;
 }
 
+.pageNumberInput {
+    width: 2rem;
+    height: 1rem;
+    font-size: 1rem;
+    text-align: center;
+    margin-right: 10px;
+}
+
 .editingSection {
     display: flex;
     flex-direction: column;
