place creation and OCR date in the same column
sorting is done only by creation date

AdventurousGui/updates-OCR#34

--- a/website/src/App.css
+++ b/website/src/App.css
@@ -352,7 +352,7 @@ cannot be styled with props, interferes with functioning of Autocomplete
 
 .MuiTableCell-root.dateCreatedCell {
     width: 12%;
-    text-align: left;
+    text-align: right;
 }
 
 .MuiTableCell-root.dateOCRCell {
